Increase memory available to the run.sh's sbt process.